--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,15 +4,59 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 
+:root {
+  font-size: 16px;
+  --bg-primary: #e5e5e5;
+  --bg-primary-light: #eeeeee;
+  --bg-secondary: #1089ff;
+  --bg-secondary-dark: #23374d;
+  --transition-speed: 600ms;
+}
+
 body {
-  font-family: JetBrains Mono Regular;
+  font-family: JetBrainsMono;
+  background-color: #1a1b1e;
+}
+
+
+.display-4 {
+  color: white;
+  font-size: 12vh;
+  font-style: normal;
+  font-weight: 500;
 }
 
 .nav {text-transform: capitalize;}
 .nav a{
   color: white !important;
   font-size: 1.2em !important;
-  }
+}
+
+.nav-link {
+  color: var(--bg-primary);
+  filter: grayscale(100%) opacity(0.7);
+  transition: var(--transition-speed);
+}
+
+.nav-link:hover {
+  filter: grayscale(0%) opacity(1);
+  color: var(--bg-primary);
+}
+
+.navbar {
+  background-color: #1a1b1e;
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.navbar-brand {
+  margin: 0;
+  padding: 0;
+}
 
 .material-icons {
   font-size: inherit;
