--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10811,7 +10811,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .home-content {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -10871,38 +10871,36 @@ body {
   }
 }
 
-@media (max-width: 1024px) {
-  .home-content {
+@media (max-width: 768px) and (orientation: landscape) {
+  .home-content__headline {
+    font-weight: 500;
+    color: #ffffff;
+    font-size: calc(5vw + 10px);
+  }
+  .nav__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: stretch;
-        -ms-flex-pack: stretch;
-            justify-content: stretch;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    list-style-type: none;
   }
+  .nav__list-item {
+    margin: calc(2vw + 10px);
+    font-size: calc(2vw + 10px);
+  }
+}
+
+@media (max-width: 768px) and (orientation: portrait) {
   .home-content__headline {
     font-weight: 500;
     color: #ffffff;
     font-size: calc(10vw + 10px);
-  }
-  .editor {
-    -webkit-box-flex: 0;
-        -ms-flex: 0;
-            flex: 0;
-    display: none;
-  }
-  .card {
-    width: 75vw;
-    height: 65vw;
-    margin-left: 5vw;
-    margin-bottom: 2vw;
-    margin-right: 2vw;
   }
   .nav__list {
     display: -webkit-box;
@@ -10920,6 +10918,36 @@ body {
   .nav__list-item {
     margin: calc(2vw + 10px);
     font-size: calc(4vw + 10px);
+  }
+}
+
+@media (max-width: 768px) {
+  .home-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: stretch;
+        -ms-flex-pack: stretch;
+            justify-content: stretch;
+  }
+  .editor {
+    -webkit-box-flex: 0;
+        -ms-flex: 0;
+            flex: 0;
+    display: none;
+  }
+  .card {
+    width: 75vw;
+    height: 65vw;
+    margin-left: 5vw;
+    margin-bottom: 2vw;
+    margin-right: 2vw;
   }
 }
 
