--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -24,7 +24,7 @@ body{
 }
 
 // For Desktop Devices - 768px to largest
-@media(min-width:1024px) {
+@media(min-width:768px) {
 	.home-content {
 		display: flex;
 		flex-wrap: wrap;
@@ -69,17 +69,54 @@ body{
   
 
 //For Mobile Devices - Zero to 768px
-@media(max-width:1024px) {
+@media(max-width:768px) {
+
+
+	@media(orientation: landscape) {
+		.home-content__headline {
+			font-weight: 500;
+			color: $font--color;
+			font-size: calc(5vw + 10px);
+		}
+
+		.nav__list {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-evenly;
+			list-style-type: none; 
+	  }
+
+	  .nav__list-item {
+		margin: calc(2vw + 10px);
+		font-size: calc(2vw + 10px);
+	}
+	}
+
+	@media(orientation: portrait) {
+		.home-content__headline {
+			font-weight: 500;
+			color: $font--color;
+			font-size: calc(10vw + 10px);
+		}
+
+		.nav__list {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+			list-style-type: none; 
+	  }
+
+	  .nav__list-item {
+		margin: calc(2vw + 10px);
+		font-size: calc(4vw + 10px);
+	}
+	}
+
 	.home-content {
 		display: flex;
 		flex-wrap: wrap;
 		flex-direction: column;
 		justify-content: stretch;
-		&__headline{
-		  font-weight: 500;
-		  color: $font--color;
-		  font-size: calc(10vw + 10px);
-		}
 	}
   
 	.editor {
@@ -93,19 +130,6 @@ body{
 	  	margin-left: 5vw;
 	  	margin-bottom: 2vw;
 	  	margin-right: 2vw;
-	}
-	
-  
-	.nav__list {
-	  	display: flex;
-	  	flex-direction: column;
-	  	justify-content: space-evenly;
-	  	list-style-type: none; 
-	}
-
-	.nav__list-item {
-		margin: calc(2vw + 10px);
-		font-size: calc(4vw + 10px);
 	}
 }
 
