--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10811,8 +10811,29 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.content-seperator {
+  background-color: rgba(255, 255, 255, 0.199);
+}
+
+.content-page {
+  width: 100%;
+  height: 100vh;
+}
+
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #2D2E32;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #bbbbbb;
+}
+
 @media (min-width: 768px) {
-  .home-content {
+  #home {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -10848,7 +10869,6 @@ body {
   .card {
     width: 35vw;
     height: 20vw;
-    margin-left: 1vw;
     margin-right: 2vw;
   }
   .nav__list {
@@ -10922,7 +10942,7 @@ body {
 }
 
 @media (max-width: 768px) {
-  .home-content {
+  #home {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -10951,11 +10971,6 @@ body {
   }
 }
 
-.home-content {
-  width: 100%;
-  height: 100vh;
-}
-
 .header {
   padding: 4vw;
   -webkit-box-flex: 1;
@@ -10964,22 +10979,39 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 #download_resume_button {
-  padding: 10px;
-  margin: 0;
-  width: calc(10vw + 20px);
+  margin-top: calc(1vw + 10px);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .card {
   background-color: #2D2E32;
+}
+
+#experience {
+  padding: 4vw;
+}
+
+.content-header {
+  font-weight: 500;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: calc(2vw + 10px);
 }
 
 .nav {
