--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,6 +1,8 @@
 // Custom.scss
 // Option A: Include all of Bootstrap
 
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 
@@ -13,6 +15,13 @@ $font--color:#ffffff;
 $font--color-light: #bbbbbb;
 $font--primary:'JetBrainsMono';
 $transition--length: .8;
+
+
+:root {
+	--primary: #1089ff;
+	--success: #71F9A8;
+}
+  
 
 
 body{
@@ -162,6 +171,19 @@ body::-webkit-scrollbar-thumb {
 
 
 
+@media(max-width:1024px) {
+	
+	.menu-icon {
+		display:block!important;
+	}
+
+	#horizontal_nav_menu {
+		display: none;
+	}
+}
+
+
+
 //----------------------------------------------------------------
 //                 Home Page - START
 //----------------------------------------------------------------
@@ -212,6 +234,81 @@ body::-webkit-scrollbar-thumb {
 //----------------------------------------------------------------
 //                 Experience Page - START
 //----------------------------------------------------------------
+
+
+
+//----------------------------------------------------------------
+//					Horizontal Navbar - START
+//----------------------------------------------------------------
+
+.nav-item {
+	padding-left: calc(1vw + 8px);
+	font-size: 14px;
+}
+
+.nav-link {
+  color: white;
+  filter: grayscale(100%) opacity(0.7);
+  transition: var(--transition-speed);
+}
+
+.nav-link:hover {
+  filter: grayscale(0%) opacity(1);
+  color: white;
+}
+
+.navbar {
+  background-color: $background--color;
+  margin: 0;
+  padding-left: 4vw;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-right: 10vw;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 100;
+  border-bottom: 0.2px solid $background--color-light;
+}
+
+.navbar-brand {
+  margin: 0;
+  padding: 0;
+  font-weight: 100;
+  color: white;
+}
+
+.menu-icon{
+	$size: 30px;
+	height: auto;
+	width: $size;
+	margin: 0;
+	padding: 0;
+	display: none;
+	position: fixed;
+	z-index:2;
+	right: 10vw;
+	cursor: pointer;
+	&__line{
+		height: 2px;
+		width: $size;
+		display: block;
+		background-color: $font--color;
+		margin-bottom: 4px;
+		transition: transform .2s ease, background-color .5s ease;
+	}
+	&__line-left{
+		width: $size / 2;
+	}
+	&__line-right{
+		width: $size / 2;
+		float: right;
+	}
+}
+
+//----------------------------------------------------------------
+//					Horizontal Navbar - START
+//----------------------------------------------------------------
+
 
 
 
@@ -279,33 +376,6 @@ body::-webkit-scrollbar-thumb {
 				width: 100%;
 			}
 		}
-	}
-}
-
-//default state
-.menu-icon{
-	$size: 30px;
-	height: $size;
-	width: $size;
-	position: fixed;
-	z-index:2;
-	right: calc(1vw + 30px);
-	top: calc(1.5vw + 30px);
-	cursor: pointer;
-	&__line{
-		height: 2px;
-		width: $size;
-		display: block;
-		background-color: $font--color;
-		margin-bottom: 4px;
-		transition: transform .2s ease, background-color .5s ease;
-	}
-	&__line-left{
-		width: $size / 2;
-	}
-	&__line-right{
-		width: $size / 2;
-		float: right;
 	}
 }
 
