--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10838,7 +10838,19 @@ body {
 
 .content-page {
   width: 100%;
-  height: 100vh;
+  height: 100vmin;
+  padding: 4vw;
+}
+
+.content-header {
+  font-weight: 800;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: calc(2.5vw + 10px);
+}
+
+.nav__list-item {
+  text-transform: uppercase;
 }
 
 body::-webkit-scrollbar {
@@ -11002,7 +11014,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .header {
-  padding: 4vw;
+  padding-top: 8vh;
+  padding-right: 4vw;
+  padding-bottom: 4vw;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -11034,14 +11048,75 @@ body::-webkit-scrollbar-thumb {
 }
 
 #experience {
-  padding: 4vw;
+  height: auto !important;
 }
 
-.content-header {
-  font-weight: 500;
-  color: #ffffff;
-  text-transform: uppercase;
-  font-size: calc(2vw + 10px);
+.exp-blocks {
+  width: auto;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.exp_1 {
+  height: 48vmin;
+  width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.exp_2 {
+  height: 48vmin;
+  width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.exp_3 {
+  height: 48vmin;
+  width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.year_of_experience {
+  margin: 0;
+  padding: 0;
+  font-size: calc(16vw + 16vh);
+  color: #bbbbbb;
+  font-weight: 800;
+  opacity: 0.1;
 }
 
 .nav-item {
