--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -39,7 +39,19 @@ body{
 
 .content-page{
 	width: 100%;
-	height: 100vh;
+	height: 100vmin;
+	padding: 4vw;
+}
+
+.content-header {
+	font-weight: 800;
+	color: $font--color;
+	text-transform: uppercase;
+	font-size: calc(2.5vw + 10px);
+}
+
+.nav__list-item {
+	text-transform: uppercase;
 }
 
 body::-webkit-scrollbar {
@@ -100,7 +112,6 @@ body::-webkit-scrollbar-thumb {
 	
 }
   
-
 //For Mobile Devices - Zero to 768px
 @media(max-width:768px) {
 
@@ -170,7 +181,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-
 @media(max-width:1024px) {
 	
 	.menu-icon {
@@ -189,7 +199,9 @@ body::-webkit-scrollbar-thumb {
 //----------------------------------------------------------------
 
 .header {
-  padding: 4vw;
+  padding-top: 8vh;
+  padding-right: 4vw;
+  padding-bottom: 4vw;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -221,15 +233,54 @@ body::-webkit-scrollbar-thumb {
 //----------------------------------------------------------------
 
 #experience {
-	padding: 4vw;
+	height: auto !important;
 }
 
-.content-header {
-	font-weight: 500;
-	color: $font--color;
-	text-transform: uppercase;
-	font-size: calc(2vw + 10px);
+.exp-blocks {
+	width: auto;
+	height: auto;
+	display: flex;
+	justify-content: flex-start;
+	align-content: center;
+	flex-direction: column;
 }
+
+.exp_1 {
+	height: 48vmin;
+	width: auto;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	//background-color: green;
+}
+
+.exp_2 {
+	height: 48vmin;
+	width: auto;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	//background-color: orangered;
+}
+
+.exp_3 {
+	height: 48vmin;
+	width: auto;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	//background-color: indigo;
+}
+
+.year_of_experience {
+	margin: 0;
+	padding: 0;
+	font-size: calc(16vw + 16vh);
+	color: $font--color-light;
+	font-weight: 800;
+	opacity: 0.1;
+}
+
 
 //----------------------------------------------------------------
 //                 Experience Page - START
