--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10818,11 +10818,6 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
-:root {
-  --primary: #1089ff;
-  --success: #71F9A8;
-}
-
 body {
   background-color: #1a1b1e;
   font-family: "JetBrainsMono";
@@ -11113,10 +11108,88 @@ body::-webkit-scrollbar-thumb {
 .year_of_experience {
   margin: 0;
   padding: 0;
-  font-size: calc(16vw + 16vh);
+  font-size: calc(14vw + 14vh);
   color: #bbbbbb;
   font-weight: 800;
   opacity: 0.1;
+}
+
+.exp_company {
+  color: #1089ff;
+  font-size: 1.8vmin;
+}
+
+.position_div {
+  padding-left: 1vw;
+  padding-right: 1vw;
+  margin-bottom: 2.5vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.pos_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 1.5vh;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  border: none;
+  outline: none;
+  background: transparent;
+  color: white;
+  font-size: 4vmin;
+  font-weight: 500;
+}
+
+.pos_btn.slide_right::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  background-color: #fff;
+  /* animate and time the transitions*/
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+}
+
+.pos_btn.slide_right {
+  z-index: 1;
+  -webkit-transition: color 250ms ease-in-out;
+  transition: color 250ms ease-in-out;
+}
+
+.pos_btn.slide_right:hover::before,
+.pos_btn.slide_right:focus::before {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+}
+
+.pos_btn.slide_right:hover,
+.pos_btn.slide_right:focus {
+  color: black;
 }
 
 .nav-item {
