--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,6 +16,16 @@ $font--color-light: #bbbbbb;
 $font--primary:'JetBrainsMono';
 $transition--length: .8;
 
+$navbar_height: calc(2.5vh + 2.5vw);
+$button_margin_h: calc(1vw + 1vh);
+$button_margin_v: calc(0.5vw + 0.5vh);
+
+$font_size_extra_small: calc(0.3vw + 0.3vh);
+$font_size_small: calc(0.6vw + 0.6vh);
+$font_size_normal: calc(1vw + 1vh);
+$font_size_large: calc(2vw + 2vh);
+$font_size_huge: calc(4vw + 4vh);
+
 
 // :root {
 // 	--primary: #1089ff;
@@ -40,14 +50,30 @@ body{
 .content-page{
 	width: 100%;
 	height: 100vmin;
-	padding: 4vw;
+	padding-left: 8vw;
+	padding-right: 8vw;
+	padding-top: 4vw;
+	padding-bottom: 4vw;
 }
 
 .content-header {
 	font-weight: 800;
 	color: $font--color;
 	text-transform: uppercase;
-	font-size: calc(2.5vw + 10px);
+	font-size: $font_size_large;
+}
+
+#horizontal_navbar {
+	height: $navbar_height;
+}
+
+.navbar-brand {
+	font-size: $font_size_normal;
+}
+
+#brand_image {
+	height: $navbar_height;
+	width: auto;
 }
 
 .nav__list-item {
@@ -67,29 +93,26 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-// For Desktop Devices - 768px to largest
-@media(min-width:768px) {
-	#home {
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: row;
-		justify-content: stretch;
-	}
+#home {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: stretch;
+	margin-top: $navbar_height;
+	//background: yellow;
+}
 
-	.home-content__headline{
-		font-weight: 500;
-		color: $font--color;
-		font-size: calc(5vw + 10px);
-	}
+// For Desktop Devices - 768px to largest
+@media(min-width:1024px) {
   
-	.editor {
+	.container_editor {
 	  flex: 1;
 	  display: flex;
 	  justify-content: flex-start;
 	  align-items: center;
 	}
   
-	.card {
+	.card_editor {
 	  width: 35vw;
 	  height: 20vw;
 	//   margin-left: 1vw;
@@ -113,15 +136,10 @@ body::-webkit-scrollbar-thumb {
 }
   
 //For Mobile Devices - Zero to 768px
-@media(max-width:768px) {
+@media(max-width:1024px) {
 
 
 	@media(orientation: landscape) {
-		.home-content__headline {
-			font-weight: 500;
-			color: $font--color;
-			font-size: calc(5vw + 10px);
-		}
 
 		.nav__list {
 			display: flex;
@@ -139,11 +157,6 @@ body::-webkit-scrollbar-thumb {
 	}
 
 	@media(orientation: portrait) {
-		.home-content__headline {
-			font-weight: 500;
-			color: $font--color;
-			font-size: calc(10vw + 10px);
-		}
 
 		.nav__list {
 			display: flex;
@@ -159,19 +172,12 @@ body::-webkit-scrollbar-thumb {
 	  
 	}
 
-	#home {
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: column;
-		justify-content: stretch;
-	}
-  
-	.editor {
+	.container_editor {
 	  	flex: 0;
 	  	display: none;
 	}
   
-	.card {
+	.card_editor {
 	  	width: 75vw;
 	  	height: 65vw;
 	  	margin-left: 5vw;
@@ -198,28 +204,78 @@ body::-webkit-scrollbar-thumb {
 //                 Home Page - START
 //----------------------------------------------------------------
 
-.header {
-  padding-top: 8vh;
-  padding-right: 4vw;
-  padding-bottom: 4vw;
+.home-content__headline{
+	font-weight: 600;
+	color: $font--color;
+	font-size: $font_size_huge;
+}
+
+#home {
+	align-content: center;
+	height: 90vmin;
+}
+
+//@todo
+.container_home {
+	padding: 0;
+	height: auto;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	//background: pink;
+}
+
+.container_header {
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  //background: purple;
+}
+
+.container_button {
+	display: flex;
+	flex-direction: row;
 }
 
 #download_resume_button{
-	margin-top: calc(1vw + 10px);
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-top: 8px;
-	padding-bottom: 8px;
-  	
+	padding-left: $button_margin_h;
+	padding-right: $button_margin_h;
+	padding-top: $button_margin_v;
+	padding-bottom: $button_margin_v;
+	font-size: $font_size_small;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	font-weight: 100;
+	background: $primary-color;
+	width: auto;
+	height: auto;
 }
 
-.card {
+// .container_editor {
+// 	background: orangered;
+// }
+
+.card_editor {
 	background-color: $background--color-light;
+	margin :auto;
+}
+
+.editor_top {
+	width: 100%;
+	height: 10%;
+	background: black;
+}
+
+.dot {
+	height: $font_size_extra_small;
+  	width: $font_size_extra_small;
+  	background-color: #bbb;
+  	border-radius: 50%;
+	display: inline-block;
+
 }
 
 //----------------------------------------------------------------
@@ -355,7 +411,7 @@ body::-webkit-scrollbar-thumb {
 
 .nav-item {
 	padding-left: calc(1vw + 8px);
-	font-size: 14px;
+	font-size: $font_size_small;
 }
 
 .nav-link {
@@ -372,20 +428,16 @@ body::-webkit-scrollbar-thumb {
 .navbar {
   background-color: $background--color;
   margin: 0;
-  padding-left: 4vw;
+  padding-left: 8vw;
   padding-top: 0;
   padding-bottom: 0;
-  padding-right: 10vw;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 100;
+  padding-right: 8vw;
   border-bottom: 0.2px solid $background--color-light;
 }
 
 .navbar-brand {
   margin: 0;
   padding: 0;
-  font-weight: 100;
   color: white;
 }
 
@@ -459,7 +511,7 @@ body::-webkit-scrollbar-thumb {
 		top:50%;
 		transform: translate(0%,-50%);
 		width: 100%;
-    text-align: center;
+    	text-align: center;
 		font-size: $font--size--calc;
 		font-weight: 200;
 		cursor: pointer;
